--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Install 
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base texlive-luatex fonts-noto-cjk --no-install-recommends
+          sudo apt-get install -y pandoc texlive-latex-base texlive-luatex texlive-xetex texlive-fonts-recommended fonts-noto-cjk --no-install-recommends
           pip install pyyaml
 
       - name: Build each report PDF
