--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install 
         run: |
+          echo "set man-db/auto-update false" | debconf-communicate
+          dpkg-reconfigure man-db
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-latex-base texlive-luatex texlive-xetex texlive-fonts-recommended fonts-noto-cjk --no-install-recommends
           pip install pyyaml
@@ -62,7 +64,12 @@ jobs:
             cd ../../
           done < reports.txt
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: all-generated-reports
-          path: report/*/*.pdf
+      - name: Upload PDF to branch
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add report/*.pdf
+          git branch pdf
+          git checkout pdf
+          git commit -m "Update PDFs"
+          git push origin pdf --force
