--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -1,5 +1,3 @@
-# .github/workflows/generate.yaml
-
 name: Generate All Reports PDFs
 
 on:
@@ -15,8 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install 
         run: |
-          echo "set man-db/auto-update false" | debconf-communicate
-          dpkg-reconfigure man-db
+          sudo echo "set man-db/auto-update false" | debconf-communicate
+          sudo dpkg-reconfigure man-db
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-latex-base texlive-luatex texlive-xetex texlive-fonts-recommended fonts-noto-cjk --no-install-recommends
           pip install pyyaml
