--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -13,8 +13,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install 
         run: |
-          sudo echo "set man-db/auto-update false" | debconf-communicate
-          sudo dpkg-reconfigure man-db
+          sudo tee /etc/dpkg/dpkg.cfg.d/01_nodoc > /dev/null << 'EOF'
+          path-exclude /usr/share/doc/*
+          path-exclude /usr/share/man/*
+          path-exclude /usr/share/info/*
+          EOF
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-latex-base texlive-luatex texlive-xetex texlive-fonts-recommended fonts-noto-cjk --no-install-recommends
           pip install pyyaml
