--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -13,11 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install 
         run: |
-          sudo tee /etc/dpkg/dpkg.cfg.d/01_nodoc > /dev/null << 'EOF'
-          path-exclude /usr/share/doc/*
-          path-exclude /usr/share/man/*
-          path-exclude /usr/share/info/*
-          EOF
+          echo "set man-db/auto-update false" | sudo debconf-communicate
+          sudo dpkg-reconfigure man-db
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-latex-base texlive-luatex texlive-xetex texlive-fonts-recommended fonts-noto-cjk --no-install-recommends
           pip install pyyaml
